Added more support input types