@@ -22,7 +22,7 @@ public class InputFetcher {
     private static final String CACHE_FILE = "input-day-%d.txt";
 
     // fetches the input for the given day and year
-    public static List<String> getInput(Path cachePath, boolean autoFetch, String session, int day, int year) throws IOException, InterruptedException {
+    public static String getInput(Path cachePath, boolean autoFetch, String session, int day, int year) throws IOException, InterruptedException {
         // Check if cached
         log.debug("Fetching input for day {} and year {}", day, year);
         log.debug("Checking if input is cached");
@@ -44,25 +44,25 @@ public class InputFetcher {
             throw new IllegalStateException("Session variable is not set");
         }
 
-        List<String> input = fetchFromUrl(url, session);
+        String input = fetchFromUrl(url, session);
         log.debug("Fetched input, caching");
         cacheInput(cachePath, day, input);
         return input;
     }
 
-    private static void cacheInput(Path cachePath, int day, List<String> input) throws IOException {
-        Files.write(cachePath.resolve(String.format(CACHE_FILE, day)), input);
+    private static void cacheInput(Path cachePath, int day, String input) throws IOException {
+        Files.writeString(cachePath.resolve(String.format(CACHE_FILE, day)), input);
     }
 
-    private static List<String> getFromCache(Path cachePath, int day) throws IOException {
-        return Files.readAllLines(cachePath.resolve(String.format(CACHE_FILE, day)));
+    private static String getFromCache(Path cachePath, int day) throws IOException {
+        return Files.readString(cachePath.resolve(String.format(CACHE_FILE, day)));
     }
 
     private static boolean isCached(Path cachePath, int day) {
         return cachePath.resolve(String.format(CACHE_FILE, day)).toFile().exists();
     }
 
-    private static List<String> fetchFromUrl(String url, String aocSession) throws IOException, InterruptedException {
+    private static String fetchFromUrl(String url, String aocSession) throws IOException, InterruptedException {
         HttpClient httpClient = HttpClient.newHttpClient();
         HttpRequest request = HttpRequest.newBuilder()
                 .uri(URI.create(url))
@@ -70,6 +70,9 @@ public class InputFetcher {
                 .header("User-Agent", "AOC-Framework-Java (Duckelekuuk)")
                 .build();
         HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-        return Arrays.stream(response.body().split("\n")).collect(Collectors.toList());
+        if (response.statusCode() != 200) {
+            throw new IllegalStateException("Invalid request");
+        }
+        return response.body();
     }
 }
